# internal/model/req/pv.go
@@ -5,15 +5,15 @@ import corev1 "k8s.io/api/core/v1"
 type PersistentVolume struct {
 	Name          string                               `json:"name"`
 	Labels        []Item                               `json:"labels"`
-	Capacity      int                                  `json:"capacity"`
+	Capacity      string                               `json:"capacity"`
 	AccessModes   []corev1.PersistentVolumeAccessMode  `json:"accessModes"`
 	ReclaimPolicy corev1.PersistentVolumeReclaimPolicy `json:"reclaimPolicy"`
 	VolumeSource  VolumeSource                         `json:"volumeSource"`
 }
 
 type VolumeSource struct {
-	Type            string          `json:"type"`
-	NFSVolumeSource NFSVolumeSource `json:"NFSVolumeSource"`
+	Type string          `json:"type"`
+	NFS  NFSVolumeSource `json:"nfs"`
 }
 
 type NFSVolumeSource struct {
